# ChangeLog for net-im/skype
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/skype/ChangeLog,v 1.88 2008/02/29 20:13:52 carlo Exp $

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> skype-1.4.0.118.ebuild,
  skype-2.0.0.27.ebuild, skype-2.0.0.43.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

*skype-2.0.0.43 (06 Feb 2008)

  06 Feb 2008; Gustavo Felisberto <humpback@gentoo.org>
  +skype-2.0.0.43.ebuild:
  Bumped to new beta version

  06 Dec 2007; Gustavo Felisberto <humpback@gentoo.org>
  files/digest-skype-2.0.0.27, Manifest:
  Fixed problem with digest. Closes bug #201418

*skype-2.0.0.27 (05 Dec 2007)

  05 Dec 2007; Gustavo Felisberto <humpback@gentoo.org>
  skype-1.4.0.118.ebuild, -skype-2.0.0.13-r1.ebuild, +skype-2.0.0.27.ebuild:
  Beta 2 of skype with video.

  17 Nov 2007; Gustavo Felisberto <humpback@gentoo.org>
  -skype-1.2.0.18.ebuild, -skype-1.2.0.21-r1.ebuild,
  -skype-1.3.0.53-r1.ebuild, -skype-1.4.0.74-r2.ebuild,
  -skype-1.4.0.94.ebuild, -skype-1.4.0.99.ebuild:
  Removing older versions now that 1.4.0.118 is stable.

  15 Nov 2007; Mart Raudsepp <leio@gentoo.org> skype-1.4.0.118.ebuild:
  amd64 stable, bug 198920

  12 Nov 2007; Jurek Bartuszek <jurek@gentoo.org> skype-1.4.0.118.ebuild:
  x86 stable (bug #198920)

*skype-2.0.0.13 (07 Nov 2007)

  07 Nov 2007; Gustavo Felisberto <humpback@gentoo.org>
  +skype-2.0.0.13.ebuild:
  New beta version. Gets packaged masked.

  06 Oct 2007; Gustavo Felisberto <humpback@gentoo.org>
  skype-1.4.0.118.ebuild:
  Fixed missing unpack of libsigc++. Fixes #194910. Thanks to Joël Bohnes for
  reporting and Bernhard Frauendienst for the fix.

*skype-1.4.0.118 (06 Oct 2007)

  06 Oct 2007; Gustavo Felisberto <humpback@gentoo.org>
  +skype-1.4.0.118.ebuild:
  Added 1.4.0.118. The delay was because there is a problem with the upstream
  static version that does not include compiled translations. This was fixed