@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/skype/skype-2.0.0.43.ebuild,v 1.2 2008/02/29 20:13:52 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/skype/skype-2.0.0.63.ebuild,v 1.1 2008/03/14 11:18:38 humpback Exp $
 
 inherit eutils qt4 pax-utils
 
